--- a/webroot/page.html
+++ b/webroot/page.html
@@ -36,7 +36,7 @@
     </div>
     
     <div class="footer">
-      <p>Built for Reddit's Cybersecurity Awareness Hackathon</p>
+      <p>Built as Reddit's Cybersecurity Awareness Game</p>
     </div>
     
     <script type="application/javascript" src="script.js"></script>
