--- a/webroot/page.html
+++ b/webroot/page.html
@@ -10,12 +10,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Animal Trivia</h1>
+    <div id="ornaments"></div>
+    <h1>🐾 UpPaws: Animal Trivia</h1>
     <h3>Welcome, <span id="username">User</span>!</h3>
     <h3>Your score: <span id="userScore">0</span> points</h3>
     <h4 id="userStreak" class="subtitle hidden">Streak: <span id="streakVal">0</span> 🔥</h4>
     <div id="leaderboard" class="leaderboard hidden"></div>
     
+    <div class="hero">🦁 🐼 🦊 🦒 🦉 🐯</div>
+
     <div class="challenge-card">
       <h2 id="challengeTitle">Loading question...</h2>
       <p id="challengeScenario">Please wait while we load your animal trivia question.</p>
