--- a/webroot/page.html
+++ b/webroot/page.html
@@ -74,7 +74,7 @@
       </div>
 
       <!-- Overlays -->
-      <div id="startOverlay" class="overlay visible">
+      <div id="startOverlay" class="overlay hidden">
         <div class="overlay-card">
           <div class="overlay-title">UpPaws: Animal Puzzle</div>
           <div class="overlay-sub">Daily animal challenge. Beat the timer for bonus points!</div>
